# rust-first

./: .env  .gitignore  Cargo.toml
src/: another.rs  examples.rs  file_read.rs  main.rs  test.rs
src/examples/: basic_examples.rs  basic_examples_2.rs  basic_examples_3.rs  lot_examples.rs  read_input.rs
